// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form ticket forms validation renders the error messages 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  overflow: hidden;
}

.c1 {
  border-radius: 0.5714285714285714rem 0.5714285714285714rem 0 0;
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c14 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10.c10 {
  vertical-align: baseline;
  position: absolute;
  left: -100px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  outline: 0;
  border-width: 0;
  border-style: initial;
  border-color: initial;
  background: 0 center;
  width: 1px;
  color: transparent;
  font-size: inherit;
}

.c11.c11 {
  position: relative;
}

.c11:focus {
  outline: none;
}

.c12 {
  overflow-y: auto;
  max-height: 17.142857142857142rem;
}

.c13.c13.c13:hover {
  background-color: inherit;
}

.c9 {
  cursor: default;
}

.c9.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8.c8.c8 {
  margin-bottom: 0 !important;
}

<div>
  <form
    class="form "
    novalidate=""
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
          >
            message
          </h1>
          <button
            aria-label="Minimize"
            class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.0.2"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.0.2"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="c7"
        data-testid="scroll-container-content"
      >
        <div
          class="formWrapper"
        >
          <h2
            class="ticketFormTitle "
          >
            Ticket Forms
          </h2>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-118--input"
              id="garden-field-container-118--label"
            >
              <strong>
                Your name
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="garden-field-container-118--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-118--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="name-field"
              id="garden-field-container-118--input"
              name="name"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-119--input"
              id="garden-field-container-119--label"
            >
              <strong>
                Email address
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-119--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-119--label"
              class="text__c-txt__input___38pRd text__c-txt__input--error___2-sbj "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="email-field"
              id="garden-field-container-119--input"
              name="email"
              pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
              required=""
              value=""
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a valid email address.
            </div>
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-120--input"
              id="garden-field-container-120--label"
            >
              <strong>
                Description
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-120--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-120--label"
              class="text__c-txt__input___38pRd text__c-txt__input--error___2-sbj "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-120--input"
              name="1"
              required=""
              value=""
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a value.
            </div>
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-121--input"
              id="garden-field-container-121--label"
            >
              <strong>
                Subject
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-121--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-121--label"
              class="text__c-txt__input___38pRd text__c-txt__input--error___2-sbj "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-121--input"
              name="2"
              required=""
              value=""
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a value.
            </div>
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-122--input"
              id="garden-field-container-122--label"
            >
              <strong>
                Favorite Burger
              </strong>
            </label>
            <div
              class="text__c-txt__hint___24dmS "
              data-garden-id="forms.text_hint"
              data-garden-version="7.0.2"
              id="garden-field-container-122--hint"
            >
              blah blah
            </div>
            <input
              aria-describedby="garden-field-container-122--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-122--label"
              class="text__c-txt__input___38pRd text__c-txt__input--error___2-sbj "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-122--input"
              name="4"
              required=""
              value=""
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a value.
            </div>
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-123--input"
              id="garden-field-container-123--label"
            >
              <strong>
                Favorite Integer
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-123--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-123--label"
              class="text__c-txt__input___38pRd text__c-txt__input--error___2-sbj "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-123--input"
              min="0"
              name="7"
              required=""
              step="1"
              type="number"
              value=""
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a number.
            </div>
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-124--input"
              id="garden-field-container-124--label"
            >
              <strong>
                Favorite Decimal
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-124--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-124--label"
              class="text__c-txt__input___38pRd text__c-txt__input--error___2-sbj "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-124--input"
              name="8"
              required=""
              step="any"
              type="number"
              value=""
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a number.
            </div>
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-125--input"
              id="garden-field-container-125--label"
            >
              <strong>
                Favorite Textarea
              </strong>
            </label>
            <textarea
              aria-describedby="garden-field-container-125--hint"
              aria-invalid="true"
              aria-labelledby="garden-field-container-125--label"
              class="-textarea text__c-txt__input___38pRd text__c-txt__input--error___2-sbj text__c-txt__input--area___9Qxj1 "
              data-garden-id="forms.textarea"
              data-garden-version="7.0.2"
              id="garden-field-container-125--input"
              name="10"
              required=""
              rows="5"
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.0.2"
              role="alert"
            >
              Please enter a value.
            </div>
          </div>
          <div
            data-testid="checkbox-field"
          >
            <div
              class="text__c-txt___Uzv-G range__c-range___1aYaS "
            >
              <div
                class="checkbox__c-chk___1VO4F "
              >
                <input
                  aria-labelledby="garden-field-container-126--label"
                  class="checkbox__c-chk__input___3419r "
                  data-garden-container-id="keyboardfocus"
                  data-garden-container-version="0.2.6"
                  data-garden-id="forms.checkbox"
                  data-garden-version="7.0.2"
                  id="garden-field-container-126--input"
                  name="11"
                  required=""
                  tabindex="0"
                  type="checkbox"
                />
                <label
                  class="checkbox__c-chk__label___12wm4 "
                  data-garden-container-id="field"
                  data-garden-container-version="1.1.3"
                  data-garden-id="forms.checkbox_label"
                  data-garden-version="7.0.2"
                  for="garden-field-container-126--input"
                  id="garden-field-container-126--label"
                >
                  <strong>
                    Favorite Checkbox
                  </strong>
                </label>
              </div>
              <div
                class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
                data-garden-id="forms.text_message"
                data-garden-version="7.0.2"
                role="alert"
              >
                Please check this box to proceed.
              </div>
            </div>
          </div>
          <div
            role="presentation"
            tabindex="-1"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-2-label"
              class="text__c-txt___3byGW "
              data-garden-id="dropdowns.field"
              data-garden-version="7.0.2"
              role="combobox"
            >
              <label
                class="text__c-txt__label___2Nog7 "
                data-garden-id="dropdowns.label"
                data-garden-version="7.0.2"
                for="downshift-2-input"
                id="downshift-2-label"
              >
                <strong>
                  Favorite Tagger
                </strong>
              </label>
              <div
                aria-haspopup="true"
                aria-invalid="false"
                class="c8 text__c-txt__input___17zQx text__c-txt__input--select___324ys c9"
                data-garden-id="dropdowns.select"
                data-garden-version="7.0.2"
                data-testid="dropdown-field"
                data-toggle="true"
                role="button"
                tabindex="0"
                type="button"
              >
                -
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-2-label"
                  autocomplete="off"
                  class="text__c-txt__input___17zQx text__c-txt__input--bare___PN_Zg c10"
                  id="downshift-2-input"
                  readonly=""
                  tabindex="-1"
                  value=""
                />
              </div>
              <div
                class="text__c-txt__message___L_GjG text__c-txt__message--error___2zV-K "
                data-garden-id="dropdowns.message"
                data-garden-version="7.0.2"
                role="alert"
              >
                Please enter a value.
              </div>
            </div>
            <div
              style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none; z-index: -1; visibility: hidden;"
            >
              <div
                class=""
              >
                <ul
                  aria-labelledby="downshift-2-label"
                  class="index__c-menu___3N4tx c11"
                  data-garden-id="dropdowns.menu"
                  data-garden-version="7.0.2"
                  data-testid="dropdown-options"
                  id="downshift-2-menu"
                  role="listbox"
                  style="width: 0px;"
                >
                  <div
                    class="c12"
                  >
                    <li
                      aria-selected="false"
                      class="index__c-menu__item___36mO8 c13"
                      data-garden-id="dropdowns.item"
                      data-garden-version="7.0.2"
                      data-testid="dropdown-option"
                      id="downshift-2-item-0"
                      role="option"
                    >
                      one
                    </li>
                    <li
                      aria-selected="false"
                      class="index__c-menu__item___36mO8 c13"
                      data-garden-id="dropdowns.item"
                      data-garden-version="7.0.2"
                      data-testid="dropdown-option"
                      id="downshift-2-item-1"
                      role="option"
                    >
                      two
                    </li>
                    <li
                      aria-selected="false"
                      class="index__c-menu__item___36mO8 c13"
                      data-garden-id="dropdowns.item"
                      data-garden-version="7.0.2"
                      data-testid="dropdown-option"
                      id="downshift-2-item-2"
                      role="option"
                    >
                      three
                    </li>
                  </div>
                </ul>
              </div>
            </div>
          </div>
          <input
            data-testid="dropdown-selected-value"
            name="12"
            type="hidden"
            value=""
          />
          <span />
        </div>
      </div>
      <footer
        class="c14"
      >
        <div
          class="c15"
        >
          <a
            class="icon"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <button
            class="button index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.button"
            data-garden-version="7.0.2"
            data-testid="button-ok"
            tabindex="0"
            type="submit"
          >
            Send
          </button>
        </div>
      </footer>
    </div>
  </form>
</div>
`;

exports[`renders the expected components 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  overflow: hidden;
}

.c1 {
  border-radius: 0.5714285714285714rem 0.5714285714285714rem 0 0;
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

<div>
  <form
    class="form "
    novalidate=""
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
          >
            message
          </h1>
          <button
            aria-label="Minimize"
            class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.0.2"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.0.2"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="c7"
        data-testid="scroll-container-content"
      >
        <div
          class="formWrapper"
        >
          <h2
            class="ticketFormTitle "
          />
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-0--input"
              id="garden-field-container-0--label"
            >
              <strong>
                Your name
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="garden-field-container-0--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-0--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="name-field"
              id="garden-field-container-0--input"
              name="name"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-1--input"
              id="garden-field-container-1--label"
            >
              <strong>
                Email address
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-1--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-1--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="email-field"
              id="garden-field-container-1--input"
              name="email"
              pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
              required=""
              value=""
            />
          </div>
          <span />
        </div>
      </div>
      <footer
        class="c8"
      >
        <div
          class="c9"
        >
          <a
            class="icon"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <button
            class="button index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.button"
            data-garden-version="7.0.2"
            data-testid="button-ok"
            tabindex="0"
            type="submit"
          >
            Send
          </button>
        </div>
      </footer>
    </div>
  </form>
</div>
`;

exports[`ticket forms renders the extra fields defined in the ticket form 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  overflow: hidden;
}

.c1 {
  border-radius: 0.5714285714285714rem 0.5714285714285714rem 0 0;
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c14 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10.c10 {
  vertical-align: baseline;
  position: absolute;
  left: -100px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  outline: 0;
  border-width: 0;
  border-style: initial;
  border-color: initial;
  background: 0 center;
  width: 1px;
  color: transparent;
  font-size: inherit;
}

.c11.c11 {
  position: relative;
}

.c11:focus {
  outline: none;
}

.c12 {
  overflow-y: auto;
  max-height: 17.142857142857142rem;
}

.c13.c13.c13:hover {
  background-color: inherit;
}

.c9 {
  cursor: default;
}

.c9.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8.c8.c8 {
  margin-bottom: 0 !important;
}

<div>
  <form
    class="form "
    novalidate=""
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
          >
            message
          </h1>
          <button
            aria-label="Minimize"
            class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.0.2"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.0.2"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="c7"
        data-testid="scroll-container-content"
      >
        <div
          class="formWrapper"
        >
          <h2
            class="ticketFormTitle "
          >
            Ticket Forms
          </h2>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-18--input"
              id="garden-field-container-18--label"
            >
              <strong>
                Your name
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="garden-field-container-18--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-18--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="name-field"
              id="garden-field-container-18--input"
              name="name"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-19--input"
              id="garden-field-container-19--label"
            >
              <strong>
                Email address
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-19--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-19--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              data-testid="email-field"
              id="garden-field-container-19--input"
              name="email"
              pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
              required=""
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-20--input"
              id="garden-field-container-20--label"
            >
              <strong>
                Description
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="garden-field-container-20--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-20--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-20--input"
              name="1"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-21--input"
              id="garden-field-container-21--label"
            >
              <strong>
                Subject
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="garden-field-container-21--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-21--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-21--input"
              name="2"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-22--input"
              id="garden-field-container-22--label"
            >
              <strong>
                Favorite Burger
              </strong>
               (optional)
            </label>
            <div
              class="text__c-txt__hint___24dmS "
              data-garden-id="forms.text_hint"
              data-garden-version="7.0.2"
              id="garden-field-container-22--hint"
            >
              blah blah
            </div>
            <input
              aria-describedby="garden-field-container-22--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-22--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-22--input"
              name="4"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-23--input"
              id="garden-field-container-23--label"
            >
              <strong>
                Favorite Pizza
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-23--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-23--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-23--input"
              name="5"
              required=""
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-24--input"
              id="garden-field-container-24--label"
            >
              <strong>
                Favorite Integer
              </strong>
               (optional)
            </label>
            <div
              class="text__c-txt__hint___24dmS "
              data-garden-id="forms.text_hint"
              data-garden-version="7.0.2"
              id="garden-field-container-24--hint"
            >
              description number
            </div>
            <input
              aria-describedby="garden-field-container-24--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-24--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-24--input"
              min="0"
              name="7"
              step="1"
              type="number"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-25--input"
              id="garden-field-container-25--label"
            >
              <strong>
                Favorite Decimal
              </strong>
            </label>
            <input
              aria-describedby="garden-field-container-25--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-25--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.0.2"
              id="garden-field-container-25--input"
              name="8"
              required=""
              step="any"
              type="number"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-26--input"
              id="garden-field-container-26--label"
            >
              <strong>
                Favorite Description
              </strong>
            </label>
            <textarea
              aria-describedby="garden-field-container-26--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-26--label"
              class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
              data-garden-id="forms.textarea"
              data-garden-version="7.0.2"
              id="garden-field-container-26--input"
              name="9"
              required=""
              rows="5"
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-27--input"
              id="garden-field-container-27--label"
            >
              <strong>
                Favorite Textarea
              </strong>
               (optional)
            </label>
            <textarea
              aria-describedby="garden-field-container-27--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-27--label"
              class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
              data-garden-id="forms.textarea"
              data-garden-version="7.0.2"
              id="garden-field-container-27--input"
              name="10"
              rows="5"
            />
          </div>
          <div
            data-testid="checkbox-field"
          >
            <div
              class="text__c-txt___Uzv-G range__c-range___1aYaS "
            >
              <div
                class="checkbox__c-chk___1VO4F "
              >
                <input
                  aria-labelledby="garden-field-container-28--label"
                  class="checkbox__c-chk__input___3419r "
                  data-garden-container-id="keyboardfocus"
                  data-garden-container-version="0.2.6"
                  data-garden-id="forms.checkbox"
                  data-garden-version="7.0.2"
                  id="garden-field-container-28--input"
                  name="11"
                  required=""
                  tabindex="0"
                  type="checkbox"
                />
                <label
                  class="checkbox__c-chk__label___12wm4 "
                  data-garden-container-id="field"
                  data-garden-container-version="1.1.3"
                  data-garden-id="forms.checkbox_label"
                  data-garden-version="7.0.2"
                  for="garden-field-container-28--input"
                  id="garden-field-container-28--label"
                >
                  <strong>
                    Favorite Checkbox
                  </strong>
                </label>
                <div
                  class="checkbox__c-chk__hint___1WMmR "
                  data-garden-id="forms.checkbox_hint"
                  data-garden-version="7.0.2"
                  id="garden-field-container-28--hint"
                >
                  this is the description
                </div>
              </div>
            </div>
          </div>
          <div
            role="presentation"
            tabindex="-1"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-0-label"
              class="text__c-txt___3byGW "
              data-garden-id="dropdowns.field"
              data-garden-version="7.0.2"
              role="combobox"
            >
              <label
                class="text__c-txt__label___2Nog7 "
                data-garden-id="dropdowns.label"
                data-garden-version="7.0.2"
                for="downshift-0-input"
                id="downshift-0-label"
              >
                <strong>
                  Favorite Tagger
                </strong>
              </label>
              <div
                class="text__c-txt__hint___3a0Q6 "
                data-garden-id="dropdowns.hint"
                data-garden-version="7.0.2"
              >
                this is the tagger description
              </div>
              <div
                aria-haspopup="true"
                aria-invalid="false"
                class="c8 text__c-txt__input___17zQx text__c-txt__input--select___324ys c9"
                data-garden-id="dropdowns.select"
                data-garden-version="7.0.2"
                data-testid="dropdown-field"
                data-toggle="true"
                role="button"
                tabindex="0"
                type="button"
              >
                two
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  class="text__c-txt__input___17zQx text__c-txt__input--bare___PN_Zg c10"
                  id="downshift-0-input"
                  readonly=""
                  tabindex="-1"
                  value=""
                />
              </div>
            </div>
            <div
              style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none; z-index: -1; visibility: hidden;"
            >
              <div
                class=""
              >
                <ul
                  aria-labelledby="downshift-0-label"
                  class="index__c-menu___3N4tx c11"
                  data-garden-id="dropdowns.menu"
                  data-garden-version="7.0.2"
                  data-testid="dropdown-options"
                  id="downshift-0-menu"
                  role="listbox"
                  style="width: 0px;"
                >
                  <div
                    class="c12"
                  >
                    <li
                      aria-selected="false"
                      class="index__c-menu__item___36mO8 c13"
                      data-garden-id="dropdowns.item"
                      data-garden-version="7.0.2"
                      data-testid="dropdown-option"
                      id="downshift-0-item-0"
                      role="option"
                    >
                      one
                    </li>
                    <li
                      aria-selected="false"
                      class="index__c-menu__item___36mO8 index__is-checked___34Qxa c13"
                      data-garden-id="dropdowns.item"
                      data-garden-version="7.0.2"
                      data-testid="dropdown-option"
                      id="downshift-0-item-1"
                      role="option"
                    >
                      two
                    </li>
                  </div>
                </ul>
              </div>
            </div>
          </div>
          <input
            data-testid="dropdown-selected-value"
            name="12"
            type="hidden"
            value="2"
          />
          <span />
        </div>
      </div>
      <footer
        class="c14"
      >
        <div
          class="c15"
        >
          <a
            class="icon"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <button
            class="button index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
            data-garden-container-id="keyboardfocus"
            data-garden-container-version="0.2.6"
            data-garden-id="buttons.button"
            data-garden-version="7.0.2"
            data-testid="button-ok"
            tabindex="0"
            type="submit"
          >
            Send
          </button>
        </div>
      </footer>
    </div>
  </form>
</div>
`;
